# ChordsPortal

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md
chords_portal/: Makefile  app.py  pyproject.toml
chords_portal/chords/: chords.py
chords_portal/data/example/: chords.json
chords_portal/static/: chords.css  chords.html  chords.js
